Wrote code for IP address changes
I wrote the code that allows us to set the IP addresses using resistors
on the Captan board.  I should also not that I fixed the bug where the
Captan wasn't triggering on an external trigger that happened during a
clk_enable low.  I think I have this fixed.  However, there is the issue
that if one trigger comes directly after the other, then there is the
chance that the firmware will miss it as it has been disabled the whole
time and the two triggers will just act as one.  I suppose I could add
this into the missed triggers count and output it with the rest of the
header, but it should be fine.

--- a/GEL_CAPTAN/TOP_LEVEL.ucf
+++ b/GEL_CAPTAN/TOP_LEVEL.ucf
@@ -275,12 +275,12 @@ INST "BUSDD_05DP_10S" IOSTANDARD = LVCMOS25;
 ##INST "GENERAL_03DN_07S" IOSTANDARD = LVCMOS25;
 #NET "GENERAL_03DP_06S"LOC = D26;
 #INST "GENERAL_03DP_06S" IOSTANDARD = LVCMOS25;
-#NET "IP_MAC_0"LOC = N3;
-#INST "IP_MAC_0" IOSTANDARD = LVCMOS25;
-#NET "IP_MAC_1"LOC = N5;
-#INST "IP_MAC_1" IOSTANDARD = LVCMOS25;
-#NET "IP_MAC_2"LOC = N4;
-#INST "IP_MAC_2" IOSTANDARD = LVCMOS25;
+NET "IP_MAC_0"LOC = N3;
+INST "IP_MAC_0" IOSTANDARD = LVCMOS25;
+NET "IP_MAC_1"LOC = N5;
+INST "IP_MAC_1" IOSTANDARD = LVCMOS25;
+NET "IP_MAC_2"LOC = N4;
+INST "IP_MAC_2" IOSTANDARD = LVCMOS25;
 #U9G
 NET "BUSA_00DP_00S"LOC = D10;
 INST "BUSA_00DP_00S" IOSTANDARD = LVDS_25;
@@ -924,18 +924,18 @@ INST "BUSA_30DN_61S" IOSTANDARD = LVDS_25;
 ##INST "INTERNAL_01DP_02S" IOSTANDARD = LVCMOS25;
 #NET "INTERNAL_01DN_03S"LOC = N4  ;
 ##INST "INTERNAL_01DN_03S" IOSTANDARD = LVCMOS25;
-#NET "INTERNAL_02DP_04S"LOC = V2  ;
-##INST "INTERNAL_02DP_04S" IOSTANDARD = LVCMOS25;
-#NET "INTERNAL_02DN_05S"LOC = V1  ;
-##INST "INTERNAL_02DN_05S" IOSTANDARD = LVCMOS25;
-#NET "IP_MAC_5"LOC = T8  ;
-#INST "IP_MAC_5" IOSTANDARD = LVCMOS25;
-#NET "IP_MAC_6"LOC = U7  ;
-#INST "IP_MAC_6" IOSTANDARD = LVCMOS25;
+NET "IP_MAC_3"LOC = V2  ;
+INST "IP_MAC_3" IOSTANDARD = LVCMOS25;
+NET "IP_MAC_4"LOC = V1  ;
+INST "IP_MAC_4" IOSTANDARD = LVCMOS25;
+NET "IP_MAC_5"LOC = T8  ;
+INST "IP_MAC_5" IOSTANDARD = LVCMOS25;
+NET "IP_MAC_6"LOC = U7  ;
+INST "IP_MAC_6" IOSTANDARD = LVCMOS25;
 #NET "INTERNAL_04DP_08S"LOC = U1  ;
 ##INST "INTERNAL_04DP_08S" IOSTANDARD = LVCMOS25;
-#NET "INTERNAL_04DN_09S"LOC = T1  ;
-#INST "INTERNAL_04DN_09S" IOSTANDARD = LVCMOS25;
+NET "IP_MAC_7"LOC = T1  ;
+INST "IP_MAC_7" IOSTANDARD = LVCMOS25;
 NET "U10_2"LOC = M8  ;
 INST "U10_2" IOSTANDARD = LVCMOS25;
 NET "U10_3"LOC = L8  ;
